syntax = "proto3";
package proto;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "types/basic.proto";


option go_package = ".;proto";

service AccountAPI{
    rpc Create(CreateRequest) returns (CreateResponse){
        option (google.api.http) = {
           get: "/account/create"
       };
    }

    rpc ForPublicKey(google.protobuf.StringValue) returns (types.Address){
        option (google.api.http) = {
           get: "/account/forPublicKey"
       };
    }

    rpc NewSeed(google.protobuf.Empty) returns (google.protobuf.StringValue){
        option (google.api.http) = {
           get: "/account/newSeed"
       };
    }

    rpc NewAccounts(google.protobuf.UInt32Value) returns (AccountsResponse){
        option (google.api.http) = {
           get: "/account/newAccounts"
       };
    }

    rpc PublicKey(types.Address) returns (google.protobuf.StringValue){
        option (google.api.http) = {
           get: "/account/publicKey"
       };
    }

    rpc Validate(google.protobuf.StringValue) returns (google.protobuf.BoolValue){
        option (google.api.http) = {
           get: "/account/validate"
       };
    }
}

message CreateRequest {
    string seedStr = 1;
    uint32 index   = 2;
}

message CreateResponse {
    map<string,string> value = 1;
}


message Account {
    string Seed        = 1;
    string PrivateKey  = 2;
    string PublicKey   = 3;
    string Address     = 4;
}

message AccountsResponse {
    repeated Account Accounts = 1;
}
